--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -9,6 +9,8 @@
 @import "../pages/login/login";
 @import "../pages/signup/signup";
 @import "../pages/user-profile/user-profile";
+@import "../pages/gallery/gallery";
+@import "../pages/gallery-detail/gallery-detail";
 .menu-toolbar {
   padding: 0;
   .toolbar-background {
