--- a/app/theme/app.variables.scss
+++ b/app/theme/app.variables.scss
@@ -20,6 +20,7 @@
 // Both iOS and MD colors can be further customized if colors
 // are different per mode.
 $colors: ( primary: #387ef5, secondary: #32db64, danger: #f53d3d, light: #f4f4f4, dark: #222, favorite: #69BB7B, default: #ff563b );
+//changing $primary-color and $secondary-color will change the themeing of whole app. Also change the 'default' from $colors as per your needs (preferably set same as $secondary-color).
 $primary-color: #362636;
 $secondary-color: #ff563b;
 $white: #fff;
